# yospos

./: .gitattributes  .gitignore  README.md  mise.toml  pyproject.toml  renovate.json
.github/workflows/: check.yaml
src/manselmi/yospos/: __init__.py  app.py
tests/manselmi/yospos/: test_app.py  test_version.py
